<resources>

    <string name="flower_valley">Flower Valley</string>
    <string name="app_name">Flower Valley</string>
    <string name="flower_valley1">Flower Valley</string>
    <string name="log_in">Log in</string>
    <string name="to_your_account">to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password1">Password</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Profile fragment</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_or_phone_no">Email Or Phone No</string>
    <string name="sign_up">Sign UP</string>
    <string name="popular_items">Popular Items</string>
    <string name="view_all">View All</string>
    <string name="angle_rose">Angle</string>
    <string name="angle">Angle</string>
    <string name="rose">Rose</string>
    <string name="popular_flowers">Popular Flowers</string>
    <string name="mobile">Mobile</string>
    <string name="email_address_hint">Email Address</string>
    <string name="verify">Verify</string>
    <string name="jannien_flower_bouquet">Jannien Flower Bouquet</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="cart_items">Cart Items</string>
    <string name="angle_flower_bouquet">Angle Flower Bouquet</string>
    <string name="_576_00">₹576.00</string>
    <string name="quantity">Quantity:</string>
    <string name="angle_flower_bouquet1">Angle Flower Bouquet</string>
    <string name="_576_00_">₹576.00</string>
    <string name="price_details">Price Details</string>
    <string name="quantity_">Quantity:</string>
    <string name="checkout"><![CDATA[Checkout -->]]></string>
    <string name="_50_00">₹50.00</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="sign_in_">Sign in</string>
    <string name="address">Address</string>
    <string name="add_information">Add Information</string>
    <string name="nrc_dellhi">NRC Dellhi</string>
    <string name="utter_pradesh_india">Utter Pradesh India</string>
    <string name="add_new_address">Add New Address</string>

    <string name="key_id">rzp_test_Feo6ev1HECbk7p</string>
    // ---- Use for testing key
    <!--    <string name="key_id">rzp_live_58RJgkUOse8qR8</string>--> // ---- Use for real Payment
    key
    <string name="key_secret">qFwyhIe92RgBk4wwizcGcO9T</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="contact_number">Contact Number</string>
    <string name="ashwani_kumar">Ashwani Kumar</string>
    <string name="_246735">246735</string>
    <string name="add_address">Add Address</string>
    <string name="add_new_address_">Add New Address</string>
    <string name="name_">Name</string>
    <string name="house_no_building_name">House No, Building Name</string>
    <string name="address_">Address</string>
    <string name="your_order_is_received_n_nthank_you_for_ordering_with">Your Order is Received!\n\nThank you for ordering with</string>
    <string name="show_more">Show More</string>
</resources>