<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00a67f">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_top_thankyou"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/thankyou_top_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_order_thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_top_thankyou"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/your_order_is_received_n_nthank_you_for_ordering_with"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/thankyou_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/text_order_thankyou"
        android:layout_centerHorizontal="true"
        android:src="@drawable/flower_valley_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/thanyou_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thankyou_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <RelativeLayout
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:background="@drawable/thank_you_btn_design"
        android:layout_below="@+id/thanyou_appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="288dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:paddingTop="15dp"
            android:text="@string/show_more"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:textColor="@color/green_700"
            android:textSize="22sp" />

    </RelativeLayout>



</RelativeLayout>