<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00a67a"
    android:id="@+id/fragment_login"
    tools:context=".fragment.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/flower_valley_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="28dp"
        android:background="@drawable/view_all_recycler_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textColor="@color/green_200"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/to_your_account"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/mobile"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_call">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_button"
                android:text="@string/login"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/don_have_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login"
                    android:layout_marginTop="40dp"
                    android:text="Don't have an account?"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/sign_in_"
                    android:textColor="@color/green_500"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>